# evmdasm-rs

./: Cargo.toml  LICENSE-MIT  README.md
examples/: analyze.rs  eth-multicall2.rs
src/: lib.rs
src/analyzer/: mod.rs
src/analyzer/code/: code_analyzer.rs  context.rs  mod.rs
src/dasm/: disassembler.rs  mod.rs  offset.rs  reader.rs
src/dasm/instruction/: instruction.rs  mod.rs  opcode.rs  operand.rs  peek.rs
