[package]
name = "evmdasm"
description = "EVM bytecode disassembler"
authors = ["libkluid <kluid.me@yahoo.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/libkluid/evmdasm-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
